# investment-analysis

./: .dockerignore  .gitignore  .tick_funcs.py.swo  BettingAgainstBetaImplementation.ipynb  Dockerfile  MarkowitzOptiization.ipynb  ModelEvaluations.ipynb  PortfolioOptimization.ipynb  Untitled.ipynb  Untitled1.ipynb  btc_crossval.py  cross-validation.py  crossval.py  crossvalidation.py  indexes.ipynb  requirements.txt  setup.cfg  tick_funcs.py
investment_analysis/: __init__.py  zipline_ingester.py
investment_analysis/markowitz/: strategy.py
notebooks/: BettingAgainstBetaImplementation.ipynb  MarkowitzOptiization.ipynb  PortfolioOptimization.ipynb
scripts/: crossval.py
src/: setup.cfg
src/investment_analysis/: symbols.py  zipline_ingester.py
src/investment_analysis/markowitz/: computation.py  strategy.py  symbols.py
src/investment_analysis/tracking_error/: strategy.py
