[metadata]
name = investment_analysis
version = attr: investment_analysis.__version__
author = Rory McStay
author_email = rory@rorymcstay.com
url = https://github.com/rorymcstay/tick-capture
description = Tradingo optimization and running tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.7
packages = 
    investment_analysis
test_suite = investment_analysis.test
setup_requires =
    setuptools >=60.9.3     # let's you use attr: to extract version from a modul
install_requires =
    boto3 ==1.20.14
    scikit-learn ==1.0.1
    docker ==5.0.3
    pandas ==1.3.4
    numpy
    yfinance
    requests
    zipline-reloaded

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
